@@ -1138,11 +1138,15 @@ void Map::check_collision_from_detector(Detector& detector) {
   detector.check_collision(get_entities().get_hero());
 
   // Check each entity with this detector.
+  // TODO use a grid or a quadtree to only check entities nearby.
   const std::list<MapEntityPtr>& all_entities = entities->get_entities();
   for (const MapEntityPtr& entity: all_entities) {
 
     if (entity->is_enabled()
-        && !entity->is_being_removed()) {
+        && !entity->is_suspended()
+        && !entity->is_being_removed()
+        && entity.get() != &detector
+    ) {
       detector.check_collision(*entity);
     }
   }
@@ -1171,6 +1175,7 @@ void Map::check_collision_with_detectors(MapEntity& entity, Sprite& sprite) {
   for (Detector* detector: detectors) {
 
     if (!detector->is_being_removed()
+        && !detector->is_suspended()
         && detector->is_enabled()) {
       detector->check_collision(entity, sprite);
     }
